@@ -444,3 +444,6 @@ Change list for PernMangband
 - Added multiple store code, so towns have their own stores.
 - Server/client changed to display worldpos (messy still)
 - Monster filter added to dungeon code
+- Fixed compilation problem with control.c
+- Houses added to 24 hour maintenance cycle
+- Logging added to maintenance (keep logs???)
